# italkiAnki

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md  build_backend.py  italki_anki_bazel_main.py  pyproject.toml  requirements_lock.txt
anki_addon/italki_latest_importer/: README.md  __init__.py  config.json  shared.py
italki_anki/: __init__.py  audio.py  builder.py  cards.py  cli.py  cloze.py  known_terms.py  known_terms.txt  llm.py  models.py  parser.py  runs.py  tone_ai.py  tone_model.py
tests/: conftest.py  pytest_main.py  test_addon_init.py  test_addon_shared.py  test_audio.py  test_audio_integration.py  test_builder.py  test_cards.py  test_cli.py  test_cloze.py  test_known_terms.py  test_llm.py  test_parser.py  test_runs.py  test_tone_ai.py  test_tone_model.py
