load("@pip//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_binary", "py_library", "py_test")

py_library(
    name = "italki_anki_lib",
    srcs = glob(["italki_anki/*.py"]),
    data = ["italki_anki/known_terms.txt"],
    deps = [
        requirement("boto3"),
    ],
    imports = ["."],
    visibility = ["//visibility:public"],
)

py_binary(
    name = "italki_anki_cli",
    srcs = ["italki_anki_bazel_main.py"],
    main = "italki_anki_bazel_main.py",
    deps = [":italki_anki_lib"],
)

py_test(
    name = "unit_tests",
    srcs = glob(["tests/*.py"]),
    main = "tests/pytest_main.py",
    deps = [
        ":italki_anki_lib",
        requirement("pytest"),
    ],
    imports = ["."],
)

test_suite(
    name = "all_tests",
    tests = [":unit_tests"],
)
